@@ -1,3 +1,8 @@
+21/10/2012 - KeplerBR
+- If the WebPort has not been set, uses default port (1025)
+- Simple bugfiz menu of the inventory
+- "Config.html" sent (credits: BonScott)
+
 19/10/2012 - BonScott
 - added icon to favorite easy
 - added username in top bar
